gobmkida/g3/stones_on_board
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3135:6: error: use of undeclared identifier 'stone_count_for_position_2'
if ( stone_count_for_position_2 != position_number ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3140:1: error: use of undeclared identifier 'white_stones_1'
white_stones_1 = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3143:1: error: use of undeclared identifier 'black_stones_0'
black_stones_0 = 0; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3164:1: error: use of undeclared identifier 'white_stones_1'
white_stones_1 = v6; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3166:1: error: use of undeclared identifier 'black_stones_0'
black_stones_0 = v4; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3167:1: error: use of undeclared identifier 'stone_count_for_position_2'
stone_count_for_position_2 = position_number; 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3171:10: error: use of undeclared identifier 'black_stones_0'
result = black_stones_0; 
         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/engine/board.c:3173:11: error: use of undeclared identifier 'white_stones_1'
result += white_stones_1; 
          ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/stones_on_board/src/obj/1/board.o] Error 1
